--- a/Case1_Smoking_Status_Detection/data_process.ipynb
+++ b/Case1_Smoking_Status_Detection/data_process.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,15 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def readfile (filename):\n",
-    "#     target = [\"IDENTIFICATION DATA :\", \"HISTORY OF PRESENT ILLNESS :\",\n",
-    "#            \"PAST MEDICAL HISTORY :\", \"SOCIAL HISTORY :\", \"PHYSICAL EXAMINATION :\"]\n",
-    "#     label_list = [\"UNKNOWN\", \"PAST SMOKER\", \"CURRENT SMOKER\", \"NON-SMOKER\"]\n",
-    "    f = open(\"./data/Training data/\" + filename, \"r\")\n",
+    "def readfile (path, filename):\n",
+    "    f = open(path + filename, \"r\")\n",
     "    txt = f.read().splitlines()\n",
     "\n",
     "    flag = False\n",
@@ -42,11 +39,6 @@
     "        _id = filename.split(\"_\")[1].split('.')[0]\n",
     "\n",
     "    for line in txt:\n",
-    "#         if line in target:\n",
-    "#             flag = True\n",
-    "#             continue\n",
-    "#         elif line[-1:] == \":\":\n",
-    "#             flag = False\n",
     "        if line[-1:] == \":\" : \n",
     "            flag = True\n",
     "            continue\n",
@@ -55,10 +47,10 @@
     "            \n",
     "    return (content, label, _id)\n",
     "\n",
-    "def files_to_df(files):\n",
+    "def files_to_df(path, files):\n",
     "    df = pd.DataFrame(columns = [\"content\", \"label\", \"id\"])\n",
     "    for file in files:\n",
-    "        content, label, _id = readfile(file)\n",
+    "        content, label, _id = readfile(path, file)\n",
     "        df = df.append({\n",
     "            \"content\": content,\n",
     "            \"label\": label,\n",
@@ -70,13 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = listdir(\"./data/Training data/\")\n",
-    "df = files_to_df(files)\n",
-    "# df.to_csv(\"./data/raw_data.csv\", index=False)\n"
+    "traning_files = listdir(\"./data/Training data/\")\n",
+    "testing_files = listdir(\"./data/Testing data/\")\n",
+    "df = files_to_df(\"./data/Training data/\", traning_files)\n",
+    "df_test = files_to_df(\"./data/Testing data/\", testing_files)\n",
+    "# df.to_csv(\"./data/traning_data.csv\", index=False)\n",
+    "# df_test.to_csv(\"./data/testing_data.csv\", index=False)"
    ]
   },
   {
@@ -88,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,11 +92,12 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize \n",
     "from nltk.stem import WordNetLemmatizer, PorterStemmer\n",
-    "from sklearn import model_selection\n",
     "\n",
     "# nltk.download(\"stopwords\")\n",
     "# nltk.download('punkt')\n",
     "# nltk.download('wordnet')\n",
+    "\n",
+    "# stopwords setting\n",
     "stopwords = set(stopwords.words('english'))\n",
     "symbols   = ['.', ',', '’', '“', '”', '\"', \"''\",\n",
     "             \"'\", '*', '``', '**', '$', '%', '&', '#',\n",
@@ -109,11 +105,12 @@
     "             '(', ')', '[', ']', '{', '}', \"/\"]\n",
     "stopwords.update(symbols)\n",
     "\n",
+    "\n",
+    "# tokenize, lemmatize, stemming, filter with stopwords\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "stemmer = PorterStemmer()\n",
     "clean_content = []\n",
     "\n",
-    "# tokenize, lemmatize, filter with stopwords\n",
     "for i in range(0, len(df[\"content\"])):\n",
     "    content = df[\"content\"][i]\n",
     "    word_list = word_tokenize(content.lower())\n",
@@ -121,15 +118,20 @@
     "        stemmer.stem(lemmatizer.lemmatize(word)) for word in word_list if word not in stopwords\n",
     "    )\n",
     "    clean_content.append(lemmatizer_stemming_content)\n",
-    "\n",
+    "    \n",
     "df = df.assign(clean_content = clean_content)\n",
     "\n",
-    "# label Y\n",
-    "encoder = LabelEncoder()\n",
-    "Y = encoder.fit_transform(df[\"label\"])\n",
+    "clean_content = []\n",
     "\n",
-    "# assign X\n",
-    "X = clean_content"
+    "for i in range(0, len(df_test[\"content\"])):\n",
+    "    content = df_test[\"content\"][i]\n",
+    "    word_list = word_tokenize(content.lower())\n",
+    "    lemmatizer_stemming_content = \" \".join(\n",
+    "        stemmer.stem(lemmatizer.lemmatize(word)) for word in word_list if word not in stopwords\n",
+    "    )\n",
+    "    clean_content.append(lemmatizer_stemming_content)\n",
+    "\n",
+    "df_test = df_test.assign(clean_content = clean_content)\n"
    ]
   },
   {
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -159,10 +161,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x126cdff28>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x121e4c240>"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,52 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def find_features(content):\n",
-    "    words = word_tokenize(content)\n",
-    "    features = {}\n",
-    "    for word in word_features:\n",
-    "        features[word] = (word in words)\n",
-    "\n",
-    "    return features\n",
-    "\n",
-    "# word features\n",
-    "word_features = [\"smoke\", \"smoker\", \"tobacco\"]\n",
-    "content_list = list(zip(X, Y))\n",
-    "\n",
-    "seed = 1\n",
-    "np.random.seed = seed\n",
-    "np.random.shuffle(content_list)\n",
-    "\n",
-    "# call find_features function for each SMS message\n",
-    "featuresets = [(find_features(text), label) for (text, label) in content_list]\n",
-    "\n",
-    "# split data to training, testing\n",
-    "training, testing = model_selection.train_test_split(featuresets, test_size = 0.33, random_state=seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 337,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "K Nearest Neighbors Accuracy: 35.714285714285715\n",
-      "Decision Tree Accuracy: 35.714285714285715\n",
-      "Random Forest Accuracy: 35.714285714285715\n",
-      "Logistic Regression Accuracy: 28.57142857142857\n",
-      "SGD Classifier Accuracy: 35.714285714285715\n",
-      "Naive Bayes Accuracy: 14.285714285714285\n",
-      "SVM Linear Accuracy: 28.57142857142857\n"
-     ]
-    }
-   ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -239,6 +198,60 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
+    "from nltk.classify import SklearnClassifier\n",
+    "\n",
+    "from sklearn import model_selection\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "def find_features(content):\n",
+    "    words = word_tokenize(content)\n",
+    "    features = {}\n",
+    "    for word in word_features:\n",
+    "        features[word] = (word in words)\n",
+    "    return features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K Nearest Neighbors Accuracy: 64.28571428571429\n",
+      "Decision Tree Accuracy: 64.28571428571429\n",
+      "Random Forest Accuracy: 50.0\n",
+      "Logistic Regression Accuracy: 64.28571428571429\n",
+      "SGD Classifier Accuracy: 57.14285714285714\n",
+      "Naive Bayes Accuracy: 14.285714285714285\n",
+      "SVM Linear Accuracy: 57.14285714285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "# label Y\n",
+    "encoder = LabelEncoder()\n",
+    "Y = encoder.fit_transform(df[\"label\"])\n",
+    "\n",
+    "# assign X\n",
+    "X = list(df[\"clean_content\"])\n",
+    "X_testing = list(df_test[\"clean_content\"])\n",
+    "\n",
+    "# word features\n",
+    "word_features = [\"smoke\", \"smoker\", \"tobacco\", \"addict\", \"\"]\n",
+    "content_list = list(zip(X, Y))\n",
+    "\n",
+    "seed = 0\n",
+    "np.random.seed = seed\n",
+    "np.random.shuffle(content_list)\n",
+    "\n",
+    "# call find_features function for each SMS message\n",
+    "featuresets = [(find_features(text), label) for (text, label) in content_list]\n",
+    "\n",
+    "# split data to training, testing\n",
+    "training, testing = model_selection.train_test_split(featuresets, test_size = 0.33, random_state=seed)\n",
     "\n",
     "names = [\"K Nearest Neighbors\", \"Decision Tree\", \"Random Forest\", \"Logistic Regression\", \"SGD Classifier\",\n",
     "         \"Naive Bayes\", \"SVM Linear\"]\n",
@@ -258,94 +271,8 @@
     "for name, model in models:\n",
     "    nltk_model = SklearnClassifier(model)\n",
     "    nltk_model.train(training)\n",
-    "    accuracy = nltk.classify.accuracy(nltk_model, testing)*100\n",
+    "    accuracy = nltk.classify.accuracy(nltk_model, testing) * 100\n",
     "    print(\"{} Accuracy: {}\".format(name, accuracy))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 334,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Voting Classifier: Accuracy: 28.57142857142857\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Ensemble methods - Voting classifier\n",
-    "from sklearn.ensemble import VotingClassifier\n",
-    "\n",
-    "names = [\"K Nearest Neighbors\", \"Decision Tree\", \"Random Forest\", \"Logistic Regression\", \"SGD Classifier\",\n",
-    "         \"Naive Bayes\", \"SVM Linear\"]\n",
-    "\n",
-    "classifiers = [\n",
-    "    KNeighborsClassifier(),\n",
-    "    DecisionTreeClassifier(),\n",
-    "    RandomForestClassifier(),\n",
-    "    LogisticRegression(),\n",
-    "    SGDClassifier(max_iter = 100),\n",
-    "    MultinomialNB(),\n",
-    "    SVC(kernel = 'linear')\n",
-    "]\n",
-    "\n",
-    "models = list(zip(names, classifiers))\n",
-    "\n",
-    "nltk_ensemble = SklearnClassifier(VotingClassifier(estimators = models, voting = 'hard', n_jobs = -1))\n",
-    "nltk_ensemble.train(training)\n",
-    "accuracy = nltk.classify.accuracy(nltk_model, testing)*100\n",
-    "print(\"Voting Classifier: Accuracy: {}\".format(accuracy))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 286,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make class label prediction for testing set\n",
-    "txt_features, labels = zip(*testing)\n",
-    "\n",
-    "prediction = nltk_ensemble.classify_many(txt_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 287,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.50      0.50      0.50         2\n",
-      "           1       0.00      0.00      0.00         3\n",
-      "           2       0.00      0.00      0.00         4\n",
-      "           3       0.50      1.00      0.67         5\n",
-      "\n",
-      "    accuracy                           0.43        14\n",
-      "   macro avg       0.25      0.38      0.29        14\n",
-      "weighted avg       0.25      0.43      0.31        14\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Python/3.7/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print a confusion matrix and a classification report\n",
-    "print(classification_report(labels, prediction))"
    ]
   },
   {
@@ -357,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,15 +292,42 @@
     "# from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "clean_content = list(df[\"clean_content\"])\n",
-    "tfidf = TfidfVectorizer(min_df = 1, max_df = 1, ngram_range = (1, 2))\n",
-    "features = tfidf.fit_transform(clean_content)\n",
+    "df_x = df[\"clean_content\"]\n",
+    "df_y = df[\"label_num\"]\n",
+    "x_train, x_test, y_train, y_test = model_selection.train_test_split(df_x, df_y, test_size = 0.3)\n",
     "\n",
-    "dfidf_df = pd.DataFrame(\n",
-    "    features.todense(),\n",
-    "    columns = tfidf.get_feature_names()\n",
-    ")\n",
-    "# dfidf_df"
+    "tfidf_cv = TfidfVectorizer(min_df = 1, max_df = 1, ngram_range = (1, 2), stop_words = \"english\")\n",
+    "x_traincv = tfidf_cv.fit_transform(x_train)\n",
+    "x_testcv = tfidf_cv.transform(x_test)\n",
+    "\n",
+    "mnb = MultinomialNB()\n",
+    "y_train=y_train.astype('int')\n",
+    "mnb.fit(x_traincv, y_train)\n",
+    "\n",
+    "predictions = mnb.predict(x_testcv)\n",
+    "actual = np.array(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5833333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for i in range(len(predictions)):\n",
+    "    if predictions[i] == actual[i]:\n",
+    "        count += 1\n",
+    "accuracy = count / float(len(predictions))\n",
+    "print(\"Accuracy: {}\".format(accuracy))"
    ]
   },
   {
