--- a/Case1_Smoking_Status_Detection/data_process.ipynb
+++ b/Case1_Smoking_Status_Detection/data_process.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,8 +143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 104,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -161,10 +163,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x121e4c240>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12abebef0>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,8 +188,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training, Testing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,20 +222,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K Nearest Neighbors Accuracy: 64.28571428571429\n",
+      "K Nearest Neighbors Accuracy: 50.0\n",
       "Decision Tree Accuracy: 64.28571428571429\n",
-      "Random Forest Accuracy: 50.0\n",
-      "Logistic Regression Accuracy: 64.28571428571429\n",
-      "SGD Classifier Accuracy: 57.14285714285714\n",
-      "Naive Bayes Accuracy: 14.285714285714285\n",
-      "SVM Linear Accuracy: 57.14285714285714\n"
+      "Random Forest Accuracy: 57.14285714285714\n",
+      "Logistic Regression Accuracy: 50.0\n",
+      "SGD Classifier Accuracy: 64.28571428571429\n",
+      "Naive Bayes Accuracy: 28.57142857142857\n",
+      "SVM Linear Accuracy: 50.0\n"
      ]
     }
    ],
@@ -240,7 +249,7 @@
     "X_testing = list(df_test[\"clean_content\"])\n",
     "\n",
     "# word features\n",
-    "word_features = [\"smoke\", \"smoker\", \"tobacco\", \"addict\", \"\"]\n",
+    "word_features = [\"smoke\", \"smoker\", \"tobacco\", \"addict\", \"drug\", \"cancer\", \"lung\"]\n",
     "content_list = list(zip(X, Y))\n",
     "\n",
     "seed = 0\n",
@@ -251,7 +260,7 @@
     "featuresets = [(find_features(text), label) for (text, label) in content_list]\n",
     "\n",
     "# split data to training, testing\n",
-    "training, testing = model_selection.train_test_split(featuresets, test_size = 0.33, random_state=seed)\n",
+    "training, testing = model_selection.train_test_split(featuresets, test_size = 0.33, random_state = seed)\n",
     "\n",
     "names = [\"K Nearest Neighbors\", \"Decision Tree\", \"Random Forest\", \"Logistic Regression\", \"SGD Classifier\",\n",
     "         \"Naive Bayes\", \"SVM Linear\"]\n",
@@ -279,12 +288,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TF-IDF (need to survey how does this work, not yet done)"
+    "# TF-IDF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +302,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "df_x = df[\"clean_content\"]\n",
-    "df_y = df[\"label_num\"]\n",
+    "df_y = Y\n",
     "x_train, x_test, y_train, y_test = model_selection.train_test_split(df_x, df_y, test_size = 0.3)\n",
     "\n",
     "tfidf_cv = TfidfVectorizer(min_df = 1, max_df = 1, ngram_range = (1, 2), stop_words = \"english\")\n",
@@ -310,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5833333333333334\n"
+      "Accuracy: 0.4166666666666667\n"
      ]
     }
    ],
